@@ -6,7 +6,7 @@ For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example D: dynamic properties of an un-restrained frame with a triangular section 
-Wed Mar  4 01:20:09 2009
+Wed Mar  4 20:09:10 2009
 ________________________________________________________________________________
 24 JOINTS;    30 MEMBERS;    1 LOAD CASES;  0 FIXED JOINTS;  
 For 2D problems, the Y-axis is vertical. 
