@@ -6,7 +6,7 @@ For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example I: a triangular tower  (kip in) 
-Wed Mar  4 01:20:49 2009
+Wed Mar  4 20:10:01 2009
 ________________________________________________________________________________
 15 JOINTS;    24 MEMBERS;    1 LOAD CASES;  3 FIXED JOINTS;  
 For 2D problems, the Y-axis is vertical. 
